--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,91 @@
+.loader{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #4781e4;
+    background-image: linear-gradient(#0b3ae5 0,#4781e4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loader-container{
+    width: 200px;
+    height: 200px;
+}
+
+.loader-container *{ position: absolute; }
+
+.loader-container img:first-child{
+    width: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 1s ease;
+}
+
+.loader-container.loader--animacion img:first-child{
+    width: 100%;
+}
+
+.loader-container img:nth-child(2){
+    opacity: 0;
+    position: relative;
+    top: 40%;
+    left:300px;
+}
+
+.loader-container img:last-child{
+    opacity: 0;
+    top: 55%;
+    left: -250px;
+    width: 70%;
+}
+
+@keyframes nube-grande {
+    0%{
+        opacity: 0;
+        left: 300px;
+    }
+    30%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+        left: 35px;
+    }
+}
+
+@keyframes nube-pequeña {
+    0%{
+        opacity: 0;
+        left: -250px;
+    }
+    30%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+        left: 0px;
+    }
+}
+
+.loader-container.loader--animacion img:nth-child(2){
+    animation-name: nube-grande;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+}
+
+.loader-container.loader--animacion img:last-child{
+    animation-name: nube-pequeña;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-fill-mode: forwards;
+}
+
 .principal{
     width: 100vw;
     height: 100%;
@@ -6,6 +94,7 @@
     background-position: center;
     background-blend-mode: luminosity;
     padding: 30px 0;
+    /* display: none; */
 }
 
 .principal--noche{
@@ -122,18 +211,30 @@
     background-color: transparent;
     height: 180px;
     display: flex;
+    justify-content: flex-start;
     scroll-behavior: smooth;
     overflow-x: scroll;
     overflow-y: hidden;
     margin: 10px 0 15px;
 }
 
+.pronostico-contenedor::-webkit-scrollbar{
+    height: 6px;
+    background-color: #806b57;
+    border-radius: 6px;
+}
+
+.pronostico-contenedor::-webkit-scrollbar-thumb{
+    background-color: #383838;
+    border-radius: 6px;
+}
+
 .pronostico{
     min-width: 110px;
     background-color: #5252528c;
-    height: 100%;
+    height: calc(100% - 5px);
     margin: 0 5px;
-    padding: 5px;
+    padding: 5px 5px 10px;
     border-radius: 4px;
     display: flex;
     flex-direction: column;
@@ -175,8 +276,10 @@
         justify-content: space-evenly;
     }
 
+    .pronostico-contenedor{ justify-content: center ;}
+
     .pronostico{
-        padding: 2px 0;
+        padding: 2px 3px;
     }
 
     .pronos-cont{
