--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,13 +3,13 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #4781e4;
     background-image: linear-gradient(#0b3ae5 0,#4781e4);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 .loader-container{
@@ -17,7 +17,7 @@
     height: 200px;
 }
 
-.loader-container *{ position: absolute; }
+.loader-container * { position: absolute; }
 
 .loader-container img:first-child{
     width: 60%;
@@ -86,11 +86,117 @@
     animation-fill-mode: forwards;
 }
 
+header{
+    height: 70px;
+    background-color: #003D6B;
+    display: flex;
+    justify-content: center;
+}
+
+.p-pais{
+    border-right: 1px solid white;
+    padding-right: 10px;
+    margin-right: 10px;
+}
+
+.p-grados{
+    background-color: #156bad;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.config-meteorologica{
+    position: absolute;
+    border-radius: 10px;
+    right: -5px;
+    top: 80%;
+    width: 260px;
+    height: 90px;
+    background-color: white;
+    z-index: 500;
+    color: black;
+    padding: 10px;
+}
+
+.config-meteorologica::before{
+    content: '.';
+    clip-path: polygon(0 100%, 50% 0, 100% 100%);
+    display: block;
+    width: 20px;
+    height: 10px;
+    background-color: white;
+    position: absolute;
+    top: -8px;
+    right: 6px;
+}
+
+.config-meteorologica *{
+    font-size: .8rem;
+    color: black;
+}
+
+.config-meteorologica--hidden{
+    display: none;
+    visibility: hidden;
+}
+
+.config-meteorologica--header{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.config-meteorologica--body{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.unidades{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5px;
+}
+
+.unidades > div {
+    color: black;
+    padding: 5px;
+    border: 1px solid #acacac;
+    cursor: pointer;
+}
+
+.icono{
+    width: 15px;
+    margin-right: 5px;
+}
+
+.cabezera{
+    width: 90%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cabezera--img{
+    width: 70px;
+}
+
+.cabezera--info{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .principal{
     width: 100vw;
     height: 100%;
-    background-image: linear-gradient(#0b3ae5,#4781e4,#c78659,#ffc26f);
-    background-size: cover;
+    background-color: #008CF7;
+    /* background-image: linear-gradient(#0b3ae5,#4781e4,#c78659,#ffc26f);
+     */background-size: cover;
     background-position: center;
     background-blend-mode: luminosity;
     padding: 30px 0;
@@ -128,18 +234,17 @@
 
 .search input[type = 'submit']{
     border-radius: 0 20px 20px 0;
-    /* background-color: #48157a; */
     background-color: #ec6e4c;
     color: white;
     font-weight: bold;
 }
 
 .clima{
-    width: 95%;
+    width: calc(95% - 10px);
     height: calc(auto + 5px);
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 0 15px;
     background-color: transparent;
     border-radius: 10px;
 }
@@ -197,6 +302,21 @@
     border-radius: 10px;
 }
 
+/* ===== Estilos del Mapa ===== */
+
+.mapa{
+    height: 500px;
+    max-width: 700px;
+    padding: 15px;
+    margin: 20px auto;
+}
+
+#map{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
 .clima-pronostico{
     width: 96%;
     margin: 0 auto;
@@ -208,6 +328,7 @@
 
 .pronostico-contenedor{
     width: 100%;
+    max-width: 840px;
     background-color: transparent;
     height: 180px;
     display: flex;
@@ -215,7 +336,7 @@
     scroll-behavior: smooth;
     overflow-x: scroll;
     overflow-y: hidden;
-    margin: 10px 0 15px;
+    margin: 10px auto 15px;
 }
 
 .pronostico-contenedor::-webkit-scrollbar{
@@ -254,11 +375,12 @@
     bottom: 10px;
 }
 
-@media  screen and (min-width: 1100px) {
+@media screen and (min-width: 1100px) {
 
     .clima{
         width: 80%;
         display: block;
+        margin: 0 auto;
     }
 
     .search{
@@ -267,14 +389,25 @@
 
     .clima-actual{
         display: grid;
-        grid-template-columns: 70% 30%;
+        grid-template-columns: 50% 50%;
     }
 
-    .datos-opcionales{
+    .mapa{
+       width: 90%; 
+    }
+
+    .datos-generales{
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    /* .datos-opcionales{
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-    }
+    } */
 
     .pronostico-contenedor{ justify-content: center ;}
 
@@ -284,5 +417,11 @@
 
     .pronos-cont{
         overflow-x: hidden;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .mapa{
+        width: 80%;
     }
 }
